--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w ",
     "start": "sirv public",
-    "validate": "svelte-check"
+    "lint": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
