--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.0",
+    "autoprefixer": "^10.0.1",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.1.6",
+    "postcss-load-config": "^3.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "sirv-cli": "^1.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "typescript": "^3.9.3",
+    "svelte-preprocess": "^4.5.2",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^1.0.0",
-    "sirv-cli": "^1.0.0"
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "svelte-calendar": "^1.5.0"
