Run script on build and dev

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
+    "sync": "node scripts/pull-team.js",
     "build": "npx rollup -c",
+    "prebuild": "npm run sync",
     "dev": "npx rollup -c -w ",
+    "predev": "npm run sync",
     "start": "npx sirv public",
     "lint": "npx svelte-check"
   },
