--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "scripts": {
-    "sync": "node scripts/pull-team.js",
-    "build": "npx rollup -c",
-    "prebuild": "npm run sync",
-    "dev": "npx rollup -c -w",
+    "dev": "svelte-kit dev",
     "predev": "npm run sync",
-    "start": "npx sirv public",
-    "lint": "npx svelte-check"
+    "build": "svelte-kit build",
+    "prebuild": "npm run sync",
+    "sync": "node scripts/pull-team.js",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@tsconfig/svelte": "^1.0.0",
-    "autoprefixer": "^10.0.1",
-    "node-sass": "^5.0.0",
-    "postcss": "^8.1.6",
-    "postcss-load-config": "^3.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sass": "^1.29.0",
-    "sirv-cli": "^1.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.5.2",
+    "@sveltejs/kit": "next",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-svelte3": "^3.2.0",
+    "sass": "^1.35.2",
+    "svelte": "^3.34.0",
+    "svelte-check": "^2.0.0",
+    "svelte-preprocess": "^4.0.0",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
+    "typescript": "^4.0.0"
   },
+  "type": "module",
   "dependencies": {
-    "svelte-calendar": "^1.5.0"
+    "svelte-calendar": "^2.0.4"
   }
 }
