--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-svelte3": "^3.2.0",
     "sass": "^1.35.2",
     "svelte": "^3.34.0",
