--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
 			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
+	"include": ["src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "src/*.d.ts", ]
 }
