--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -15,5 +15,8 @@ jobs:
     - name: Build check
       run: npm run build
 
-    - name: Codestyle check
+    - name: Codestyle check (ESLint)
       run: npm run lint
+
+    - name: Codestyle check (svelte-check)
+      run: npm run check
