--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cross-code-review",
+  "name": "code-cross-review",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
